[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/buildings/turret/turret_body.png" type="Texture" id=1]
[ext_resource path="res://gameplay/buildings/turret/turret.gd" type="Script" id=2]
[ext_resource path="res://gameplay/gui/building_menu/building_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/buildings/turret/turret_head.png" type="Texture" id=4]
[ext_resource path="res://gameplay/gui/energy_label/energy_label.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 33.6607

[sub_resource type="CircleShape2D" id=2]
radius = 168.675

[node name="turret" type="KinematicBody2D" groups=[
"consumers",
"interactuables",
"turrets",
]]
collision_layer = 4
collision_mask = 33
script = ExtResource( 2 )

[node name="body_sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.668182, 0.44545 )
shape = SubResource( 1 )

[node name="influence_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="influence_shape" type="CollisionShape2D" parent="influence_area"]
shape = SubResource( 2 )

[node name="building_menu" parent="." instance=ExtResource( 3 )]
position = Vector2( -26.2204, -77.5374 )

[node name="shoot_charging_timer" type="Timer" parent="."]
one_shot = true

[node name="head" type="Node2D" parent="."]

[node name="head_sprite" type="Sprite" parent="head"]
position = Vector2( -2.22725, 0.668175 )
texture = ExtResource( 4 )

[node name="energy_label" parent="." instance=ExtResource( 5 )]
position = Vector2( -9.82155, -61.1742 )
[connection signal="body_entered" from="influence_area" to="." method="_on_influence_area_body_entered"]
[connection signal="body_exited" from="influence_area" to="." method="_on_influence_area_body_exited"]
[connection signal="timeout" from="shoot_charging_timer" to="." method="_on_shoot_charging_timer_timeout"]
